# Kreveta_2

./: CMakeLists.txt
src/: bitboard.h  board.cpp  board.h  main.cpp  position.cpp  position.h  uci.cpp  uci.h  utils.h
src/global/: consts.cpp  consts.h  types.h
src/movegen/: move.cpp  move.h  movegen.cpp  movegen.h  movetables.cpp  movetables.h
tests/: CMakeLists.txt  bitboard_tests.cpp  main.cpp  utils_tests.cpp
